Some speed ups
git-svn-id: https://svn.apache.org/repos/asf/james/mailbox-integration-tester/trunk@1084692 13f79535-47bb-0310-9956-ffa450edef68